--- a/Assets/imgui.ini
+++ b/Assets/imgui.ini
@@ -39,7 +39,12 @@ Size=32,35
 Collapsed=0
 
 [Window][Botton Pos]
-Pos=2,3
-Size=164,152
+Pos=198,293
+Size=164,178
+Collapsed=0
+
+[Window][StageCreater]
+Pos=60,60
+Size=32,35
 Collapsed=0
 
