--- a/Assets/imgui.ini
+++ b/Assets/imgui.ini
@@ -39,7 +39,7 @@ Size=32,35
 Collapsed=0
 
 [Window][Botton Pos]
-Pos=16,612
+Pos=103,241
 Size=164,178
 Collapsed=0
 
@@ -47,4 +47,9 @@ Collapsed=0
 Pos=60,60
 Size=32,35
 Collapsed=0
+
+[Window][Pause Setting]
+Pos=60,60
+Size=157,307
+Collapsed=1
 
