--- a/Assets/imgui.ini
+++ b/Assets/imgui.ini
@@ -49,7 +49,12 @@ Size=32,35
 Collapsed=0
 
 [Window][Pause Setting]
-Pos=60,60
+Pos=7,9
 Size=157,307
-Collapsed=1
+Collapsed=0
+
+[Window][Button Instantiate]
+Pos=169,12
+Size=344,378
+Collapsed=0
 
