imguiのinstantiateあとちょい

--- a/Assets/imgui.ini
+++ b/Assets/imgui.ini
@@ -39,7 +39,7 @@ Size=32,35
 Collapsed=0
 
 [Window][Botton Pos]
-Pos=103,241
+Pos=169,7
 Size=164,178
 Collapsed=0
 
@@ -54,7 +54,12 @@ Size=157,307
 Collapsed=0
 
 [Window][Button Instantiate]
-Pos=169,12
-Size=344,378
+Pos=6,322
+Size=296,378
+Collapsed=0
+
+[Window][Scene Change]
+Pos=1125,1
+Size=154,115
 Collapsed=0
 
