--- a/Assets/imgui.ini
+++ b/Assets/imgui.ini
@@ -40,7 +40,7 @@ Collapsed=0
 
 [Window][Botton Pos]
 Pos=169,7
-Size=164,178
+Size=202,205
 Collapsed=0
 
 [Window][StageCreater]
@@ -54,7 +54,7 @@ Size=157,307
 Collapsed=0
 
 [Window][Button Instantiate]
-Pos=302,244
+Pos=89,151
 Size=296,378
 Collapsed=0
 
@@ -64,7 +64,32 @@ Size=154,115
 Collapsed=0
 
 [Window][GameStartButton]
-Pos=337,6
-Size=165,239
+Pos=851,54
+Size=359,377
+Collapsed=0
+
+[Window][GameStartButtonллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллл⌡дyЪЖ]
+Pos=-6,207
+Size=1141,262
+Collapsed=0
+
+[Window][GameStartButtonлллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллp╧]
+Pos=289,90
+Size=374,318
+Collapsed=0
+
+[Window][GameStartButtonллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллллл⌡дццЖ]
+Pos=60,60
+Size=279,274
+Collapsed=0
+
+[Window][GameStartButton1]
+Pos=61,61
+Size=325,302
+Collapsed=0
+
+[Window][GameStartButton2]
+Pos=68,32
+Size=284,280
 Collapsed=0
 
