--- a/Assets/imgui.ini
+++ b/Assets/imgui.ini
@@ -39,8 +39,8 @@ Size=32,35
 Collapsed=0
 
 [Window][Botton Pos]
-Pos=169,7
-Size=202,205
+Pos=10,331
+Size=416,348
 Collapsed=0
 
 [Window][StageCreater]
@@ -49,13 +49,13 @@ Size=32,35
 Collapsed=0
 
 [Window][Pause Setting]
-Pos=7,6
+Pos=7,7
 Size=157,307
 Collapsed=0
 
 [Window][Button Instantiate]
-Pos=89,151
-Size=296,378
+Pos=887,135
+Size=296,414
 Collapsed=0
 
 [Window][Scene Change]
@@ -64,7 +64,7 @@ Size=154,115
 Collapsed=0
 
 [Window][GameStartButton]
-Pos=851,54
+Pos=858,135
 Size=359,377
 Collapsed=0
 
@@ -91,5 +91,35 @@ Collapsed=0
 [Window][GameStartButton2]
 Pos=68,32
 Size=284,280
+Collapsed=0
+
+[Window][GameStartButton3]
+Pos=176,90
+Size=507,305
+Collapsed=0
+
+[Window][GameStartButton4]
+Pos=60,60
+Size=246,254
+Collapsed=0
+
+[Window][optionButton]
+Pos=59,60
+Size=211,352
+Collapsed=0
+
+[Window][optionButton1]
+Pos=809,187
+Size=275,265
+Collapsed=0
+
+[Window][optionButton2]
+Pos=340,99
+Size=278,304
+Collapsed=0
+
+[Window][optionButton3]
+Pos=60,60
+Size=288,298
 Collapsed=0
 
