画像をimguiを出せるようにした

--- a/Assets/imgui.ini
+++ b/Assets/imgui.ini
@@ -39,7 +39,7 @@ Size=32,35
 Collapsed=0
 
 [Window][Botton Pos]
-Pos=10,331
+Pos=10,326
 Size=416,348
 Collapsed=0
 
@@ -49,7 +49,7 @@ Size=32,35
 Collapsed=0
 
 [Window][Pause Setting]
-Pos=7,7
+Pos=275,39
 Size=157,307
 Collapsed=0
 
@@ -64,7 +64,7 @@ Size=154,115
 Collapsed=0
 
 [Window][GameStartButton]
-Pos=858,135
+Pos=715,348
 Size=359,377
 Collapsed=0
 
@@ -121,5 +121,45 @@ Collapsed=0
 [Window][optionButton3]
 Pos=60,60
 Size=288,298
+Collapsed=0
+
+[Window][Image Instantiate]
+Pos=296,126
+Size=348,313
+Collapsed=0
+
+[Window][Image Create]
+Pos=426,26
+Size=263,290
+Collapsed=0
+
+[Window][Button Create]
+Pos=60,60
+Size=185,386
+Collapsed=0
+
+[Window][Create Button]
+Pos=1028,123
+Size=185,386
+Collapsed=0
+
+[Window][Create Image]
+Pos=348,34
+Size=367,395
+Collapsed=0
+
+[Window][tuna]
+Pos=60,60
+Size=100,226
+Collapsed=0
+
+[Window][t]
+Pos=60,60
+Size=290,270
+Collapsed=0
+
+[Window][t1]
+Pos=60,60
+Size=255,270
 Collapsed=0
 
