--- a/GameBaseDx11.vcxproj
+++ b/GameBaseDx11.vcxproj
@@ -165,6 +165,7 @@
     <ClCompile Include="Gauge.cpp" />
     <ClCompile Include="Goal.cpp" />
     <ClCompile Include="GoalScene.cpp" />
+    <ClCompile Include="ImageBase.cpp" />
     <ClCompile Include="imgui\imgui.cpp" />
     <ClCompile Include="imgui\imgui_draw.cpp" />
     <ClCompile Include="imgui\imgui_impl_dx11.cpp" />
@@ -227,6 +228,7 @@
     <ClInclude Include="Gauge.h" />
     <ClInclude Include="Goal.h" />
     <ClInclude Include="GoalScene.h" />
+    <ClInclude Include="ImageBase.h" />
     <ClInclude Include="imgui\imconfig.h" />
     <ClInclude Include="imgui\imgui.h" />
     <ClInclude Include="imgui\imgui_impl_dx11.h" />
