--- a/GameBaseDx11.vcxproj.filters
+++ b/GameBaseDx11.vcxproj.filters
@@ -268,6 +268,7 @@
     <ClCompile Include="Imgui_Obj.cpp">
       <Filter>Imgui\ImClass</Filter>
     </ClCompile>
+    <ClCompile Include="ImageBase.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Engine\BoxCollider.h">
@@ -450,6 +451,7 @@
       <Filter>00Engine\Button</Filter>
     </ClInclude>
     <ClInclude Include="InstanceManager.h" />
+    <ClInclude Include="ImageBase.h" />
   </ItemGroup>
   <ItemGroup>
     <FxCompile Include="Assets\Shader\Simple2D.hlsl">
