--- a/Assets/imgui.ini
+++ b/Assets/imgui.ini
@@ -39,7 +39,7 @@ Size=32,35
 Collapsed=0
 
 [Window][Botton Pos]
-Pos=-3,545
+Pos=19,325
 Size=416,348
 Collapsed=0
 
@@ -49,7 +49,7 @@ Size=32,35
 Collapsed=0
 
 [Window][Pause Setting]
-Pos=20,10
+Pos=20,11
 Size=157,307
 Collapsed=0
 
@@ -139,12 +139,12 @@ Size=185,386
 Collapsed=0
 
 [Window][Create Button]
-Pos=1028,123
-Size=185,386
+Pos=206,9
+Size=185,457
 Collapsed=0
 
 [Window][Create Image]
-Pos=348,34
+Pos=233,208
 Size=367,395
 Collapsed=0
 
@@ -161,5 +161,10 @@ Collapsed=0
 [Window][t1]
 Pos=60,60
 Size=255,270
+Collapsed=0
+
+[Window][CreateList]
+Pos=994,116
+Size=279,394
 Collapsed=0
 
