editクラスを追加し、ポーズ画面を作りやすくした

--- a/Assets/imgui.ini
+++ b/Assets/imgui.ini
@@ -49,8 +49,8 @@ Size=32,35
 Collapsed=0
 
 [Window][Pause Setting]
-Pos=20,11
-Size=157,307
+Pos=7,5
+Size=157,120
 Collapsed=0
 
 [Window][Button Instantiate]
@@ -59,8 +59,8 @@ Size=296,414
 Collapsed=0
 
 [Window][Scene Change]
-Pos=1125,1
-Size=154,115
+Pos=1037,1
+Size=242,115
 Collapsed=0
 
 [Window][GameStartButton]
@@ -139,13 +139,13 @@ Size=185,386
 Collapsed=0
 
 [Window][Create Button]
-Pos=206,9
+Pos=225,39
 Size=185,457
-Collapsed=0
+Collapsed=1
 
 [Window][Create Image]
-Pos=233,208
-Size=367,395
+Pos=-2,259
+Size=367,439
 Collapsed=0
 
 [Window][tuna]
@@ -164,7 +164,12 @@ Size=255,270
 Collapsed=0
 
 [Window][CreateList]
-Pos=994,116
-Size=279,394
+Pos=1039,118
+Size=240,599
+Collapsed=0
+
+[Window][UI_TYPE]
+Pos=166,6
+Size=133,54
 Collapsed=0
 
