--- a/GameBaseDx11.vcxproj.filters
+++ b/GameBaseDx11.vcxproj.filters
@@ -38,9 +38,6 @@
     <Filter Include="01TitleScene\Button">
       <UniqueIdentifier>{ce3ae0c5-e8ae-4ace-8409-abbd693c2ea8}</UniqueIdentifier>
     </Filter>
-    <Filter Include="01TitleScene\Object">
-      <UniqueIdentifier>{5dd84fb2-ed65-4080-95d3-ef6e6e7de580}</UniqueIdentifier>
-    </Filter>
     <Filter Include="04GameOverScene">
       <UniqueIdentifier>{92222d39-8410-49a8-8f4a-cd055d5360de}</UniqueIdentifier>
     </Filter>
@@ -50,14 +47,8 @@
     <Filter Include="Test">
       <UniqueIdentifier>{7b9c0570-7caa-435b-8d3b-9128db8152b5}</UniqueIdentifier>
     </Filter>
-    <Filter Include="02PlayScene\Object">
-      <UniqueIdentifier>{875cc2df-0048-47d9-9dfe-304e9681d2c3}</UniqueIdentifier>
-    </Filter>
     <Filter Include="02PlayScene\Stage">
       <UniqueIdentifier>{77c72eb4-8333-48ce-9646-a9ed8f923b92}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="02PlayScene\Object\Player">
-      <UniqueIdentifier>{81983803-514a-41f0-bc4d-6ccf4ee28d1e}</UniqueIdentifier>
     </Filter>
     <Filter Include="00Engine\GameObject\Camera">
       <UniqueIdentifier>{e806bba1-87cd-4de8-bcdc-a3b73a8a3235}</UniqueIdentifier>
@@ -77,9 +68,6 @@
     <Filter Include="00Engine\Ini">
       <UniqueIdentifier>{fd9aa88c-6632-4779-aad3-c057afbf118b}</UniqueIdentifier>
     </Filter>
-    <Filter Include="01TitleScene\Object\ObjectManager">
-      <UniqueIdentifier>{70968b0c-0b3f-42f2-bccc-27388fbc35cb}</UniqueIdentifier>
-    </Filter>
     <Filter Include="00Engine\Math">
       <UniqueIdentifier>{df261b89-18ec-47f9-949e-37eb15b19236}</UniqueIdentifier>
     </Filter>
@@ -91,6 +79,21 @@
     </Filter>
     <Filter Include="UI">
       <UniqueIdentifier>{611c71c3-d7c1-4591-a4ae-9b96a9f3baf4}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="05EditScene">
+      <UniqueIdentifier>{0d889f4b-c1ce-4613-8abd-3374548c84f1}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="00Engine\Manager">
+      <UniqueIdentifier>{1f180a84-7f2c-4f73-96af-218102bd5b46}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="06TutorialScene">
+      <UniqueIdentifier>{2d47703b-6a48-46dd-8849-517f303f878f}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Object">
+      <UniqueIdentifier>{875cc2df-0048-47d9-9dfe-304e9681d2c3}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Object\Player">
+      <UniqueIdentifier>{81983803-514a-41f0-bc4d-6ccf4ee28d1e}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
@@ -175,14 +178,8 @@
     <ClCompile Include="StartScene.cpp">
       <Filter>01TitleScene</Filter>
     </ClCompile>
-    <ClCompile Include="PlayScene.cpp">
-      <Filter>02PlayScene</Filter>
-    </ClCompile>
     <ClCompile Include="GoalScene.cpp">
       <Filter>03GoalScene</Filter>
-    </ClCompile>
-    <ClCompile Include="Ball.cpp">
-      <Filter>01TitleScene\Object</Filter>
     </ClCompile>
     <ClCompile Include="Engine\SceneManager.cpp">
       <Filter>00Engine\SceneManager</Filter>
@@ -194,10 +191,10 @@
       <Filter>Test</Filter>
     </ClCompile>
     <ClCompile Include="Cannon.cpp">
-      <Filter>02PlayScene\Object</Filter>
+      <Filter>Object</Filter>
     </ClCompile>
     <ClCompile Include="SalmonRoe.cpp">
-      <Filter>02PlayScene\Object</Filter>
+      <Filter>Object</Filter>
     </ClCompile>
     <ClCompile Include="Stage.cpp">
       <Filter>02PlayScene\Stage</Filter>
@@ -206,13 +203,13 @@
       <Filter>UI</Filter>
     </ClCompile>
     <ClCompile Include="Crab.cpp">
-      <Filter>02PlayScene\Object\Player</Filter>
+      <Filter>Object\Player</Filter>
     </ClCompile>
     <ClCompile Include="Maguro.cpp">
-      <Filter>02PlayScene\Object\Player</Filter>
+      <Filter>Object\Player</Filter>
     </ClCompile>
     <ClCompile Include="Syari.cpp">
-      <Filter>02PlayScene\Object\Player</Filter>
+      <Filter>Object\Player</Filter>
     </ClCompile>
     <ClCompile Include="Billboard.cpp">
       <Filter>00Engine\ResourceManager</Filter>
@@ -227,7 +224,7 @@
       <Filter>00Engine\GameObject\Camera</Filter>
     </ClCompile>
     <ClCompile Include="Goal.cpp">
-      <Filter>02PlayScene\Object</Filter>
+      <Filter>Object</Filter>
     </ClCompile>
     <ClCompile Include="Time.cpp">
       <Filter>00Engine\Time</Filter>
@@ -259,20 +256,44 @@
     <ClCompile Include="ChangeSceneButton.cpp">
       <Filter>00Engine\Button</Filter>
     </ClCompile>
-    <ClCompile Include="GameManager.cpp" />
-    <ClCompile Include="BackUI.cpp" />
     <ClCompile Include="PlayerControlButton.cpp">
       <Filter>00Engine\Button</Filter>
     </ClCompile>
-    <ClCompile Include="InstanceManager.cpp" />
     <ClCompile Include="Imgui_Obj.cpp">
       <Filter>Imgui\ImClass</Filter>
     </ClCompile>
-    <ClCompile Include="ImageBase.cpp" />
-    <ClCompile Include="EditScene.cpp" />
-    <ClCompile Include="Slider.cpp" />
-    <ClCompile Include="MoveByMouthButton.cpp" />
-    <ClCompile Include="PlayerBase.cpp" />
+    <ClCompile Include="BackUI.cpp">
+      <Filter>UI</Filter>
+    </ClCompile>
+    <ClCompile Include="Slider.cpp">
+      <Filter>00Engine\Button</Filter>
+    </ClCompile>
+    <ClCompile Include="MoveByMouthButton.cpp">
+      <Filter>00Engine\Button</Filter>
+    </ClCompile>
+    <ClCompile Include="EditScene.cpp">
+      <Filter>05EditScene</Filter>
+    </ClCompile>
+    <ClCompile Include="GameManager.cpp">
+      <Filter>00Engine\Manager</Filter>
+    </ClCompile>
+    <ClCompile Include="InstanceManager.cpp">
+      <Filter>00Engine\Manager</Filter>
+    </ClCompile>
+    <ClCompile Include="ImageBase.cpp">
+      <Filter>UI</Filter>
+    </ClCompile>
+    <ClCompile Include="TutorialScene.cpp" />
+    <ClCompile Include="PlayScene.cpp">
+      <Filter>02PlayScene</Filter>
+    </ClCompile>
+    <ClCompile Include="Ball.cpp">
+      <Filter>Object</Filter>
+    </ClCompile>
+    <ClCompile Include="PlayerBase.cpp">
+      <Filter>Object\Player</Filter>
+    </ClCompile>
+    <ClCompile Include="Player.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Engine\BoxCollider.h">
@@ -362,14 +383,8 @@
     <ClInclude Include="StartScene.h">
       <Filter>01TitleScene</Filter>
     </ClInclude>
-    <ClInclude Include="PlayScene.h">
-      <Filter>02PlayScene</Filter>
-    </ClInclude>
     <ClInclude Include="GoalScene.h">
       <Filter>03GoalScene</Filter>
-    </ClInclude>
-    <ClInclude Include="Ball.h">
-      <Filter>01TitleScene\Object</Filter>
     </ClInclude>
     <ClInclude Include="Engine\SceneManager.h">
       <Filter>00Engine\SceneManager</Filter>
@@ -381,10 +396,10 @@
       <Filter>Test</Filter>
     </ClInclude>
     <ClInclude Include="Cannon.h">
-      <Filter>02PlayScene\Object</Filter>
+      <Filter>Object</Filter>
     </ClInclude>
     <ClInclude Include="SalmonRoe.h">
-      <Filter>02PlayScene\Object</Filter>
+      <Filter>Object</Filter>
     </ClInclude>
     <ClInclude Include="Stage.h">
       <Filter>02PlayScene\Stage</Filter>
@@ -393,13 +408,13 @@
       <Filter>UI</Filter>
     </ClInclude>
     <ClInclude Include="Crab.h">
-      <Filter>02PlayScene\Object\Player</Filter>
+      <Filter>Object\Player</Filter>
     </ClInclude>
     <ClInclude Include="Maguro.h">
-      <Filter>02PlayScene\Object\Player</Filter>
+      <Filter>Object\Player</Filter>
     </ClInclude>
     <ClInclude Include="Syari.h">
-      <Filter>02PlayScene\Object\Player</Filter>
+      <Filter>Object\Player</Filter>
     </ClInclude>
     <ClInclude Include="Billboard.h">
       <Filter>00Engine\ResourceManager</Filter>
@@ -414,7 +429,7 @@
       <Filter>00Engine\GameObject\Camera</Filter>
     </ClInclude>
     <ClInclude Include="Goal.h">
-      <Filter>02PlayScene\Object</Filter>
+      <Filter>Object</Filter>
     </ClInclude>
     <ClInclude Include="Imgui_Obj.h">
       <Filter>Imgui\ImClass</Filter>
@@ -449,17 +464,41 @@
     <ClInclude Include="ChangeSceneButton.h">
       <Filter>00Engine\Button</Filter>
     </ClInclude>
-    <ClInclude Include="GameManager.h" />
-    <ClInclude Include="BackUI.h" />
     <ClInclude Include="PlayerControlButton.h">
       <Filter>00Engine\Button</Filter>
     </ClInclude>
-    <ClInclude Include="InstanceManager.h" />
-    <ClInclude Include="ImageBase.h" />
-    <ClInclude Include="EditScene.h" />
-    <ClInclude Include="Slider.h" />
-    <ClInclude Include="MoveByMouthButton.h" />
-    <ClInclude Include="PlayerBase.h" />
+    <ClInclude Include="BackUI.h">
+      <Filter>UI</Filter>
+    </ClInclude>
+    <ClInclude Include="Slider.h">
+      <Filter>00Engine\Button</Filter>
+    </ClInclude>
+    <ClInclude Include="MoveByMouthButton.h">
+      <Filter>00Engine\Button</Filter>
+    </ClInclude>
+    <ClInclude Include="EditScene.h">
+      <Filter>05EditScene</Filter>
+    </ClInclude>
+    <ClInclude Include="GameManager.h">
+      <Filter>00Engine\Manager</Filter>
+    </ClInclude>
+    <ClInclude Include="InstanceManager.h">
+      <Filter>00Engine\Manager</Filter>
+    </ClInclude>
+    <ClInclude Include="ImageBase.h">
+      <Filter>UI</Filter>
+    </ClInclude>
+    <ClInclude Include="TutorialScene.h" />
+    <ClInclude Include="PlayScene.h">
+      <Filter>02PlayScene</Filter>
+    </ClInclude>
+    <ClInclude Include="Ball.h">
+      <Filter>Object</Filter>
+    </ClInclude>
+    <ClInclude Include="PlayerBase.h">
+      <Filter>Object\Player</Filter>
+    </ClInclude>
+    <ClInclude Include="Player.h" />
   </ItemGroup>
   <ItemGroup>
     <FxCompile Include="Assets\Shader\Simple2D.hlsl">
