--- a/GameBaseDx11.vcxproj
+++ b/GameBaseDx11.vcxproj
@@ -180,7 +180,6 @@
     <ClCompile Include="ModelBase.cpp" />
     <ClCompile Include="MoveByMouthButton.cpp" />
     <ClCompile Include="OBB.cpp" />
-    <ClCompile Include="Particle.cpp" />
     <ClCompile Include="Pause.cpp" />
     <ClCompile Include="Player.cpp" />
     <ClCompile Include="PlayerBase.cpp" />
@@ -196,6 +195,7 @@
     <ClCompile Include="Syari.cpp" />
     <ClCompile Include="Time.cpp" />
     <ClCompile Include="TutorialScene.cpp" />
+    <ClCompile Include="VFX.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Ball.h" />
@@ -253,7 +253,6 @@
     <ClInclude Include="ModelBase.h" />
     <ClInclude Include="MoveByMouthButton.h" />
     <ClInclude Include="OBB.h" />
-    <ClInclude Include="Particle.h" />
     <ClInclude Include="Pause.h" />
     <ClInclude Include="Player.h" />
     <ClInclude Include="PlayerBase.h" />
@@ -269,6 +268,7 @@
     <ClInclude Include="Syari.h" />
     <ClInclude Include="Time.h" />
     <ClInclude Include="TutorialScene.h" />
+    <ClInclude Include="VFX.h" />
   </ItemGroup>
   <ItemGroup>
     <FxCompile Include="Assets\Shader\BillBoard.hlsl">
