--- a/GameBaseDx11.vcxproj.filters
+++ b/GameBaseDx11.vcxproj.filters
@@ -86,14 +86,17 @@
     <Filter Include="00Engine\Manager">
       <UniqueIdentifier>{1f180a84-7f2c-4f73-96af-218102bd5b46}</UniqueIdentifier>
     </Filter>
-    <Filter Include="06TutorialScene">
-      <UniqueIdentifier>{2d47703b-6a48-46dd-8849-517f303f878f}</UniqueIdentifier>
-    </Filter>
     <Filter Include="Object">
       <UniqueIdentifier>{875cc2df-0048-47d9-9dfe-304e9681d2c3}</UniqueIdentifier>
     </Filter>
     <Filter Include="Object\Player">
       <UniqueIdentifier>{81983803-514a-41f0-bc4d-6ccf4ee28d1e}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Scene">
+      <UniqueIdentifier>{29fd75ac-6524-4dda-96c2-6a52a965153e}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Scene\06TutorialScene">
+      <UniqueIdentifier>{2d47703b-6a48-46dd-8849-517f303f878f}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
@@ -283,7 +286,6 @@
     <ClCompile Include="ImageBase.cpp">
       <Filter>UI</Filter>
     </ClCompile>
-    <ClCompile Include="TutorialScene.cpp" />
     <ClCompile Include="PlayScene.cpp">
       <Filter>02PlayScene</Filter>
     </ClCompile>
@@ -293,7 +295,15 @@
     <ClCompile Include="PlayerBase.cpp">
       <Filter>Object\Player</Filter>
     </ClCompile>
-    <ClCompile Include="Player.cpp" />
+    <ClCompile Include="TutorialScene.cpp">
+      <Filter>Scene\06TutorialScene</Filter>
+    </ClCompile>
+    <ClCompile Include="TutorialStage.cpp">
+      <Filter>Scene\06TutorialScene</Filter>
+    </ClCompile>
+    <ClCompile Include="Player.cpp">
+      <Filter>Object\Player</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Engine\BoxCollider.h">
@@ -488,7 +498,6 @@
     <ClInclude Include="ImageBase.h">
       <Filter>UI</Filter>
     </ClInclude>
-    <ClInclude Include="TutorialScene.h" />
     <ClInclude Include="PlayScene.h">
       <Filter>02PlayScene</Filter>
     </ClInclude>
@@ -498,7 +507,15 @@
     <ClInclude Include="PlayerBase.h">
       <Filter>Object\Player</Filter>
     </ClInclude>
-    <ClInclude Include="Player.h" />
+    <ClInclude Include="TutorialScene.h">
+      <Filter>Scene\06TutorialScene</Filter>
+    </ClInclude>
+    <ClInclude Include="TutorialStage.h">
+      <Filter>Scene\06TutorialScene</Filter>
+    </ClInclude>
+    <ClInclude Include="Player.h">
+      <Filter>Object\Player</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <FxCompile Include="Assets\Shader\Simple2D.hlsl">
